sql/parser/src/main/java/com/calcite/sql/parser/antlr/AnsiSqlParser.java
// Generated from AnsiSql.g4 by ANTLR 4.13.2

package com.calcite.sql.parser.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AnsiSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, SELECT=11, FROM=12, WHERE=13, GROUP=14, BY=15, HAVING=16, ORDER=17, 
		LIMIT=18, AS=19, JOIN=20, INNER=21, LEFT=22, RIGHT=23, FULL=24, OUTER=25, 
		CROSS=26, NATURAL=27, ON=28, USING=29, DISTINCT=30, ALL=31, WITH=32, ROLLUP=33, 
		ASC=34, DESC=35, OFFSET=36, LIKE=37, IS=38, NULL=39, IN=40, EXISTS=41, 
		CASE=42, WHEN=43, THEN=44, ELSE=45, END=46, MATCHED=47, INSERT=48, INTO=49, 
		VALUES=50, UPDATE=51, SET=52, DELETE=53, MERGE=54, DROP=55, ALTER=56, 
		CREATE=57, TABLE=58, VIEW=59, RENAME=60, TO=61, COLUMN=62, ADD=63, PRIMARY=64, 
		KEY=65, NOT=66, UNIQUE=67, STAR=68, ID=69, STRING_LITERAL=70, NUMBER=71, 
		WS=72, EQ=73, NEQ=74, LT=75, GT=76, LEQ=77, GEQ=78;
	public static final int
		RULE_statement = 0, RULE_selectStatement = 1, RULE_insertStatement = 2, 
		RULE_updateStatement = 3, RULE_deleteStatement = 4, RULE_mergeStatement = 5, 
		RULE_dropStatement = 6, RULE_alterStatement = 7, RULE_alterAction = 8, 
		RULE_createTableStatement = 9, RULE_columnDefinition = 10, RULE_createViewStatement = 11, 
		RULE_renameStatement = 12, RULE_dataType = 13, RULE_assignment = 14, RULE_distinct = 15, 
		RULE_selectList = 16, RULE_selectElement = 17, RULE_fromClause = 18, RULE_tableSource = 19, 
		RULE_primaryTableSource = 20, RULE_joinPart = 21, RULE_joinType = 22, 
		RULE_columnList = 23, RULE_whereClause = 24, RULE_groupByClause = 25, 
		RULE_havingClause = 26, RULE_orderByClause = 27, RULE_orderByElement = 28, 
		RULE_limitClause = 29, RULE_expr = 30, RULE_subquery = 31, RULE_caseExpr = 32, 
		RULE_functionCall = 33, RULE_columnRef = 34, RULE_literal = 35, RULE_alias = 36, 
		RULE_tableName = 37, RULE_columnName = 38, RULE_functionName = 39, RULE_star = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"statement", "selectStatement", "insertStatement", "updateStatement", 
			"deleteStatement", "mergeStatement", "dropStatement", "alterStatement", 
			"alterAction", "createTableStatement", "columnDefinition", "createViewStatement", 
			"renameStatement", "dataType", "assignment", "distinct", "selectList", 
			"selectElement", "fromClause", "tableSource", "primaryTableSource", "joinPart", 
			"joinType", "columnList", "whereClause", "groupByClause", "havingClause", 
			"orderByClause", "orderByElement", "limitClause", "expr", "subquery", 
			"caseExpr", "functionCall", "columnRef", "literal", "alias", "tableName", 
			"columnName", "functionName", "star"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "','", "'/'", "'%'", "'+'", "'-'", "'<>'", "'!='", 
			"'.'", "'SELECT'", "'FROM'", "'WHERE'", "'GROUP'", "'BY'", "'HAVING'", 
			"'ORDER'", "'LIMIT'", "'AS'", "'JOIN'", "'INNER'", "'LEFT'", "'RIGHT'", 
			"'FULL'", "'OUTER'", "'CROSS'", "'NATURAL'", "'ON'", "'USING'", "'DISTINCT'", 
			"'ALL'", "'WITH'", "'ROLLUP'", "'ASC'", "'DESC'", "'OFFSET'", "'LIKE'", 
			"'IS'", "'NULL'", "'IN'", "'EXISTS'", "'CASE'", "'WHEN'", "'THEN'", "'ELSE'", 
			"'END'", "'MATCHED'", "'INSERT'", "'INTO'", "'VALUES'", "'UPDATE'", "'SET'", 
			"'DELETE'", "'MERGE'", "'DROP'", "'ALTER'", "'CREATE'", "'TABLE'", "'VIEW'", 
			"'RENAME'", "'TO'", "'COLUMN'", "'ADD'", "'PRIMARY'", "'KEY'", "'NOT'", 
			"'UNIQUE'", "'*'", null, null, null, null, "'='", null, "'<'", "'>'", 
			"'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "SELECT", 
			"FROM", "WHERE", "GROUP", "BY", "HAVING", "ORDER", "LIMIT", "AS", "JOIN", 
			"INNER", "LEFT", "RIGHT", "FULL", "OUTER", "CROSS", "NATURAL", "ON", 
			"USING", "DISTINCT", "ALL", "WITH", "ROLLUP", "ASC", "DESC", "OFFSET", 
			"LIKE", "IS", "NULL", "IN", "EXISTS", "CASE", "WHEN", "THEN", "ELSE", 
			"END", "MATCHED", "INSERT", "INTO", "VALUES", "UPDATE", "SET", "DELETE", 
			"MERGE", "DROP", "ALTER", "CREATE", "TABLE", "VIEW", "RENAME", "TO", 
			"COLUMN", "ADD", "PRIMARY", "KEY", "NOT", "UNIQUE", "STAR", "ID", "STRING_LITERAL", 
			"NUMBER", "WS", "EQ", "NEQ", "LT", "GT", "LEQ", "GEQ"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AnsiSql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnsiSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public InsertStatementContext insertStatement() {
			return getRuleContext(InsertStatementContext.class,0);
		}
		public UpdateStatementContext updateStatement() {
			return getRuleContext(UpdateStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public MergeStatementContext mergeStatement() {
			return getRuleContext(MergeStatementContext.class,0);
		}
		public DropStatementContext dropStatement() {
			return getRuleContext(DropStatementContext.class,0);
		}
		public AlterStatementContext alterStatement() {
			return getRuleContext(AlterStatementContext.class,0);
		}
		public CreateTableStatementContext createTableStatement() {
			return getRuleContext(CreateTableStatementContext.class,0);
		}
		public CreateViewStatementContext createViewStatement() {
			return getRuleContext(CreateViewStatementContext.class,0);
		}
		public RenameStatementContext renameStatement() {
			return getRuleContext(RenameStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsiSqlVisitor ) return ((AnsiSqlVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statement);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				selectStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				insertStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				updateStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				deleteStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				mergeStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(87);
				dropStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(88);
				alterStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(89);
				createTableStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(90);
				createViewStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(91);
				renameStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectStatementContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(AnsiSqlParser.SELECT, 0); }
		public SelectListContext selectList() {
			return getRuleContext(SelectListContext.class,0);
		}
		public DistinctContext distinct() {
			return getRuleContext(DistinctContext.class,0);
		}
		public FromClauseContext fromClause() {
			return getRuleContext(FromClauseContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public GroupByClauseContext groupByClause() {
			return getRuleContext(GroupByClauseContext.class,0);
		}
		public HavingClauseContext havingClause() {
			return getRuleContext(HavingClauseContext.class,0);
		}
		public OrderByClauseContext orderByClause() {
			return getRuleContext(OrderByClauseContext.class,0);
		}
		public LimitClauseContext limitClause() {
			return getRuleContext(LimitClauseContext.class,0);
		}
		public SelectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).enterSelectStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).exitSelectStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsiSqlVisitor ) return ((AnsiSqlVisitor<? extends T>)visitor).visitSelectStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectStatementContext selectStatement() throws RecognitionException {
		SelectStatementContext _localctx = new SelectStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_selectStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(SELECT);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DISTINCT || _la==ALL) {
				{
				setState(95);
				distinct();
				}
			}

			setState(98);
			selectList();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(99);
				fromClause();
				}
			}

			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(102);
				whereClause();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(105);
				groupByClause();
				}
			}

			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HAVING) {
				{
				setState(108);
				havingClause();
				}
			}

			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(111);
				orderByClause();
				}
			}

			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(114);
				limitClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InsertStatementContext extends ParserRuleContext {
		public TerminalNode INSERT() { return getToken(AnsiSqlParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(AnsiSqlParser.INTO, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode VALUES() { return getToken(AnsiSqlParser.VALUES, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public ColumnListContext columnList() {
			return getRuleContext(ColumnListContext.class,0);
		}
		public InsertStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insertStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).enterInsertStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).exitInsertStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsiSqlVisitor ) return ((AnsiSqlVisitor<? extends T>)visitor).visitInsertStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsertStatementContext insertStatement() throws RecognitionException {
		InsertStatementContext _localctx = new InsertStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_insertStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(INSERT);
			setState(118);
			match(INTO);
			setState(119);
			tableName();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(120);
				match(T__0);
				setState(121);
				columnList();
				setState(122);
				match(T__1);
				}
			}

			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VALUES:
				{
				setState(126);
				match(VALUES);
				setState(127);
				match(T__0);
				setState(128);
				expr(0);
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(129);
					match(T__2);
					setState(130);
					expr(0);
					}
					}
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(136);
				match(T__1);
				}
				break;
			case SELECT:
				{
				setState(138);
				selectStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UpdateStatementContext extends ParserRuleContext {
		public TerminalNode UPDATE() { return getToken(AnsiSqlParser.UPDATE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode SET() { return getToken(AnsiSqlParser.SET, 0); }
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public UpdateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_updateStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).enterUpdateStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).exitUpdateStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsiSqlVisitor ) return ((AnsiSqlVisitor<? extends T>)visitor).visitUpdateStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UpdateStatementContext updateStatement() throws RecognitionException {
		UpdateStatementContext _localctx = new UpdateStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_updateStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(UPDATE);
			setState(142);
			tableName();
			setState(143);
			match(SET);
			setState(144);
			assignment();
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(145);
				match(T__2);
				setState(146);
				assignment();
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(152);
				whereClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeleteStatementContext extends ParserRuleContext {
		public TerminalNode DELETE() { return getToken(AnsiSqlParser.DELETE, 0); }
		public TerminalNode FROM() { return getToken(AnsiSqlParser.FROM, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public DeleteStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deleteStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).enterDeleteStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).exitDeleteStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsiSqlVisitor ) return ((AnsiSqlVisitor<? extends T>)visitor).visitDeleteStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeleteStatementContext deleteStatement() throws RecognitionException {
		DeleteStatementContext _localctx = new DeleteStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_deleteStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(DELETE);
			setState(156);
			match(FROM);
			setState(157);
			tableName();
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(158);
				whereClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MergeStatementContext extends ParserRuleContext {
		public TerminalNode MERGE() { return getToken(AnsiSqlParser.MERGE, 0); }
		public TerminalNode INTO() { return getToken(AnsiSqlParser.INTO, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode USING() { return getToken(AnsiSqlParser.USING, 0); }
		public TableSourceContext tableSource() {
			return getRuleContext(TableSourceContext.class,0);
		}
		public TerminalNode ON() { return getToken(AnsiSqlParser.ON, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public List<TerminalNode> WHEN() { return getTokens(AnsiSqlParser.WHEN); }
		public TerminalNode WHEN(int i) {
			return getToken(AnsiSqlParser.WHEN, i);
		}
		public List<TerminalNode> MATCHED() { return getTokens(AnsiSqlParser.MATCHED); }
		public TerminalNode MATCHED(int i) {
			return getToken(AnsiSqlParser.MATCHED, i);
		}
		public List<TerminalNode> THEN() { return getTokens(AnsiSqlParser.THEN); }
		public TerminalNode THEN(int i) {
			return getToken(AnsiSqlParser.THEN, i);
		}
		public TerminalNode UPDATE() { return getToken(AnsiSqlParser.UPDATE, 0); }
		public TerminalNode SET() { return getToken(AnsiSqlParser.SET, 0); }
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public TerminalNode NOT() { return getToken(AnsiSqlParser.NOT, 0); }
		public TerminalNode INSERT() { return getToken(AnsiSqlParser.INSERT, 0); }
		public TerminalNode VALUES() { return getToken(AnsiSqlParser.VALUES, 0); }
		public TerminalNode AS() { return getToken(AnsiSqlParser.AS, 0); }
		public ColumnListContext columnList() {
			return getRuleContext(ColumnListContext.class,0);
		}
		public MergeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mergeStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).enterMergeStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsiSqlListener ) ((AnsiSqlListener)listener).exitMergeStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsiSqlVisitor ) return ((AnsiSqlVisitor<? extends T>)visitor).visitMergeStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MergeStatementContext mergeStatement() throws RecognitionException {
		MergeStatementContext _localctx = new MergeStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mergeStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(MERGE);
			setState(162);
			match(INTO);
			setState(163);
			tableName();
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS || _la==ID) {
				{
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(164);
					match(AS);
					}
				}

				setState(167);
				alias();
				}
			}

			setState(170);
			match(USING);
			setState(171);
			tableSource();
			setState(172);
			match(ON);
			setState(173);
			expr(0);
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(174);
				match(WHEN);
				setState(175);
				match(MATCHED);
				setState(176);
				match(THEN);
				setState(177);
				match(UPDATE);
				setState(178);
				match(SET);
				setState(179);
				assignment();
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(180);
					match(T__2);
					setState(181);
					assignment();
					}
					}
					setState(186);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHEN) {
				{
				setState(189);
				match(WHEN);
				setState(190);
				match(NOT);
				setState(191);
				match(MATCHED);
				setState(192);
				match(THEN);
				setState(193);
				match(INSERT);
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(194);
					match(T__0);
					setState(195);
					columnList();
					setState(196);
					match(T__1);
					}
				}

				setState(200);
				match(VALUES);
				setState(201);
				match(T__0);
				setState(202);
				expr(0);
				setState(207);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(203);
					match(T__2);
					setState(204);
					expr(0);
					}
					}
					setState(209);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(210);
				match(T__1);
				}
			}
